Applied fix for loading partial page fragments
Realised that jQuery Tools used jQuery.load() under the hood.
jQuery.load() allows you to load partial page fragments:

wrap.load('external-page.html #myselector');

Neat!

--- a/external-content2.htm
+++ b/external-content2.htm
@@ -3,6 +3,7 @@
 <title>External Page 2</title>
 </head>
 <body>
+<div id="container">
 <p style="float: left; margin:10px 40px 0 10px;">
   <img src="screens.png" />
 </p>
@@ -57,5 +58,6 @@
   tincidunt varius, lacus lorem fringilla nunc, sed varius orci augue
   a mi. Quisque nec nibh.
 </p>
+</div>
 </body>
 </html>
