--- a/external-content.htm
+++ b/external-content.htm
@@ -8,6 +8,7 @@
 <script src="http://cdn.jquerytools.org/1.2.6/all/jquery.tools.min.js" type="text/javascript"></script>
 </head>
 <body>
+<div id="container">
 <p style="float: left; margin:10px 40px 0 10px;">
   <img src="screens.png" />
 </p>
@@ -62,5 +63,6 @@
   tincidunt varius, lacus lorem fringilla nunc, sed varius orci augue
   a mi. Quisque nec nibh.
 </p>
+</div>
 </body>
 </html>
