--- a/index.html
+++ b/index.html
@@ -52,26 +52,31 @@
 
 <!-- make all links with the 'rel' attribute open overlays -->
 <script>
-$(function() {
+    $(function () {
 
-    // if the function argument is given to overlay,
-    // it is assumed to be the onBeforeLoad event listener
-    $("a[rel]").overlay({
+        // if the function argument is given to overlay,
+        // it is assumed to be the onBeforeLoad event listener
+        $("a[rel]").overlay({
 
-        mask: 'darkred',
-        effect: 'apple',
+            mask: 'darkred',
+            effect: 'apple',
 
-        onBeforeLoad: function() {
+            onBeforeLoad: function () {
 
-            // grab wrapper element inside content
-            var wrap = this.getOverlay().find(".contentWrap");
+                // grab wrapper element inside content
+                var wrap = this.getOverlay().find(".contentWrap");
 
-            // load the page specified in the trigger
-            wrap.load(this.getTrigger().attr("href"));
-        }
+                // url
+                var url = this.getTrigger().attr("href") + ' #container';
 
+                // load the page specified in the trigger
+                wrap.load(url, function () {
+                    alert('Load was performed.');
+                });
+            }
+
+        });
     });
-});
 </script>
 </body>
 </html>
